# ZetaProof

./: .gitignore  LICENSE  README.md  ZetaProof.cabal  package.json  stack.yaml  webpack.config.js
app/: Main.hs
src/: Lib.hs
static/: bundle.d2ed187126dc18afd657.js  index.html
