name:                ZetaProof
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/RecursiveLogic/ZetaProof#README
license:             BSD3
license-file:        LICENSE
author:              http://radiux.io/
maintainer:          http://radiux.io/
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       aeson >= 0.11.2.0,
                       bytestring >= 0.10.6.0,
                       wreq >= 0.4.1.0
  default-language:    Haskell2010

executable ZetaProof-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ZetaProof
  default-language:    Haskell2010

test-suite ZetaProof-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ZetaProof
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ZetaProof
